force-app/main/default/objects/QuoteLineItem/fields/Levantamiento_Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Levantamiento_Tecnico__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vínculo con el levantamiento técnico que originó esta partida.</description>
    <label>Levantamiento Técnico</label>
    <referenceTo>Levantamiento_Tecnico__c</referenceTo>
    <relationshipLabel>Partidas de Presupuesto</relationshipLabel>
    <relationshipName>QuoteLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>