force-app/main/default/objects/QuoteLineItem/fields/Precio_Final_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Final_Unitario__c</fullName>
    <label>Precio Final Unitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>