force-app/main/default/objects/QuoteLineItem/fields/Pyatz_Technical_Description__c.field-meta.xml
<CustomField>
    <fullName>Pyatz_Technical_Description__c</fullName>
    <description>Campo creado específicamente para el proyecto Pyatz para almacenar descripciones técnicas largas que superan los 255 caracteres del estándar.</description>
    <label>Detalle Técnico Pyatz</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>