force-app/main/default/objects/QuoteLineItem/fields/Solucion_Tecnica__c.field-meta.xml
<CustomField>
    <fullName>Solucion_Tecnica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Vínculo con la solución técnica (hallazgo) que originó esta partida.</description>
    <label>Solución Técnica</label>
    <referenceTo>Solucion_Tecnica__c</referenceTo>
    <relationshipLabel>Partidas de Presupuesto</relationshipLabel>
    <relationshipName>Partidas_de_Presupuesto_Solucion</relationshipName>
    <type>Lookup</type>
</CustomField>